# surge-quality

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_responses.py  0002_rubric_scores.py  0003_telemetry_signals.py  0004_claude_reviews.py  0004_llm_reviews.py  0005_routing_decisions.py
dashboards/: README.md  install.sh  surge-quality.json
dashboards/provisioning/dashboards/: surge-quality.yaml
dashboards/provisioning/datasources/: surge-quality.yaml
deploy/: install-systemd.sh  smoke-dashboard.sh  surge-quality.service
deploy/screenshots/: README.md
docs/: PLAN.md
src/surge_quality/: __init__.py  db.py  main.py  models.py  settings.py
src/surge_quality/api/: __init__.py  auth.py  dashboard.py  routing.py  scoring.py  telemetry.py
src/surge_quality/reviewer/: __init__.py  anthropic_client.py  llm_reviewer.py  parser.py  prompts.py  service.py  worker.py
src/surge_quality/routing/: __init__.py  classifier.py  similarity.py
src/surge_quality/scoring/: __init__.py  hermes_client.py  parser.py  rubric.py  service.py
src/surge_quality/templates/: dashboard.html.j2
tests/integration/: test_dashboard_route.py  test_reviewer.py  test_routing_api.py  test_scoring_orchestration.py  test_telemetry.py
tests/smoke/: test_dashboard_smoke.py
tests/unit/: test_classifier.py  test_dashboard.py  test_hermes_client.py  test_main.py  test_models.py  test_reviewer_prompts.py  test_rubric.py  test_settings.py  test_similarity.py
