# Copyright © 2026 SurgeXi Business Intelligence, a Teamsmith Enterprises LLC company. All Rights Reserved.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surge-quality"
version = "0.1.0"
description = "SurgeXi Quality recommender — rubric scoring, telemetry, LLM-as-teacher, routing decisions"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "SurgeXi", email = "ops@surgexi.com" }]
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.32,<0.33",
  "sqlalchemy>=2.0,<2.1",
  "alembic>=1.13,<2.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "psycopg2-binary>=2.9,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "prometheus-client>=0.21,<1.0",
  "httpx>=0.27,<0.28",
  "anthropic>=0.40,<1.0",
  "structlog>=24.4,<25.0",
  "jinja2>=3.1,<4.0",
]

[tool.setuptools.package-data]
"surge_quality" = ["templates/*.j2"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=6.0,<7.0",
  "respx>=0.21,<1.0",
  "ruff>=0.7,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"
